--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
 Ciao sono la home
+
+<!DOCTYPE html>
+<html>
+
+<head>
+  <title>Titolo della pagina</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+  <h1>Intestazione</h1>
+  <p>Paragrafo</p>
+</body>
+
+</html>
