--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 
 <head>
+  <meta charset="UTF-8">
   <title>Titolo della pagina</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <h1>Intestazione</h1>
-  <p>Paragrafo</p>
+  Contenuto della pagina
 </body>
 
 </html>
