--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Titolo della pagina</title>
-  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  Contenuto della pagina
+  <h1>Titolo principale</h1>
+  <p>Testo del paragrafo</p>
 </body>
 
 </html>
