--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
   <meta charset="UTF-8">
   <title>Titolo della pagina</title>
   <link rel="stylesheet" href="style.css">
+  
+  <nav>
+  <ul>
+    <li><a href="#">Home</a></li>
+    <li><a href="#">Chi Siamo</a></li>
+    <li><a href="#">Prodotti</a></li>
+    <li><a href="#">Contatti</a></li>
+  </ul>
+</nav>
+  
 </head>
 
 <body>
