--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <li><a href="#">Contatti</a></li>
   </ul>
 </nav>
-  
+   <a class="menu-toggle" href="#">
+    <i class="fa fa-bars"></i> Menu
+  </a>
 </head>
 
 <body>
