--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Sito web Brusa</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <style>
