--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ del dettaglio tradizionale, in Italia e all’estero. <br> L’azienda è presen
     <div class="row row-cols-1 row-cols-md-3 g-5">
   <div class="col">
     <div class="card">
-      <img src="/Images/baci_nudo.jpg" class="card-img-top" alt="Baci di Dama">
+      <img src="/Images/Biscotti/baci_nudo.jpg" class="card-img-top" alt="Baci di Dama">
       <div class="card-body">
         <h5 class="card-title">Baci di Dama</h5>
       </div>
@@ -187,7 +187,7 @@ del dettaglio tradizionale, in Italia e all’estero. <br> L’azienda è presen
   </div>
   <div class="col">
     <div class="card">
-      <img src="/Images/meliga_nudo.jpg" class="card-img-top" alt="Paste di Meliga">
+      <img src="/Images/Biscotti/meliga_nudo.jpg" class="card-img-top" alt="Paste di Meliga">
       <div class="card-body">
         <h5 class="card-title">Paste di Meliga</h5>
       </div>
@@ -195,7 +195,7 @@ del dettaglio tradizionale, in Italia e all’estero. <br> L’azienda è presen
   </div>
   <div class="col">
     <div class="card">
-      <img src="/Images/lingue_nudo.jpg" class="card-img-top" alt="Lingue di Gatto">
+      <img src="/Images/Biscotti/lingue_nudo.jpg" class="card-img-top" alt="Lingue di Gatto">
       <div class="card-body">
         <h5 class="card-title">Lingue di Gatto</h5>
       </div>
@@ -203,7 +203,7 @@ del dettaglio tradizionale, in Italia e all’estero. <br> L’azienda è presen
   </div>
   <div class="col">
     <div class="card">
-      <img src="/Images/torcetto_nudo.jpg" class="card-img-top" alt="Torcetti">
+      <img src="/Images/Biscotti/torcetto_nudo.jpg" class="card-img-top" alt="Torcetti">
       <div class="card-body">
         <h5 class="card-title">Torcetti</h5>
       </div>
@@ -211,7 +211,7 @@ del dettaglio tradizionale, in Italia e all’estero. <br> L’azienda è presen
   </div>
       <div class="col">
     <div class="card">
-      <img src="/Images/torciocco_nudo.jpg" class="card-img-top" alt="Torcetti al cioccolato">
+      <img src="/Images/Biscotti/torciocco_nudo.jpg" class="card-img-top" alt="Torcetti al cioccolato">
       <div class="card-body">
         <h5 class="card-title">Torcetti al cioccolato</h5>
       </div>
@@ -219,7 +219,7 @@ del dettaglio tradizionale, in Italia e all’estero. <br> L’azienda è presen
   </div>
       <div class="col">
     <div class="card">
-      <img src="/Images/amaretti_nudo.jpg" class="card-img-top" alt="Amaretti">
+      <img src="/Images/Biscotti/amaretti_nudo.jpg" class="card-img-top" alt="Amaretti">
       <div class="card-body">
         <h5 class="card-title">Amaretti</h5>
       </div>
@@ -227,7 +227,7 @@ del dettaglio tradizionale, in Italia e all’estero. <br> L’azienda è presen
   </div>
       <div class="col">
     <div class="card">
-      <img src="/Images/krumiri_nudo.jpg" class="card-img-top" alt="Krumiri">
+      <img src="/Images/Biscotti/krumiri_nudo.jpg" class="card-img-top" alt="Krumiri">
       <div class="card-body">
         <h5 class="card-title">Krumiri</h5>
       </div>
@@ -235,7 +235,7 @@ del dettaglio tradizionale, in Italia e all’estero. <br> L’azienda è presen
   </div>
       <div class="col">
     <div class="card">
-      <img src="/Images/kumiriciocco_nudo.jpg" class="card-img-top" alt="Krumiri con gocce di cioccolato">
+      <img src="/Images/Biscotti/kumiriciocco_nudo.jpg" class="card-img-top" alt="Krumiri con gocce di cioccolato">
       <div class="card-body">
         <h5 class="card-title">Krumiri con gocce di cioccolato</h5>
       </div>
@@ -243,7 +243,7 @@ del dettaglio tradizionale, in Italia e all’estero. <br> L’azienda è presen
   </div>
       <div class="col">
     <div class="card">
-      <img src="/Images/48_monte-bianco-nudo.jpg" class="card-img-top" alt="Monte Bianco">
+      <img src="/Images/Biscotti/48_monte-bianco-nudo.jpg" class="card-img-top" alt="Monte Bianco">
       <div class="card-body">
         <h5 class="card-title">Monte Bianco</h5>
       </div>
@@ -251,7 +251,7 @@ del dettaglio tradizionale, in Italia e all’estero. <br> L’azienda è presen
   </div>
       <div class="col">
     <div class="card">
-      <img src="/Images/780_novara-nudi-1.jpg" class="card-img-top" alt="Novara">
+      <img src="/Images/Biscotti/780_novara-nudi-1.jpg" class="card-img-top" alt="Novara">
       <div class="card-body">
         <h5 class="card-title">Novara</h5>
       </div>
@@ -259,7 +259,7 @@ del dettaglio tradizionale, in Italia e all’estero. <br> L’azienda è presen
   </div>
       <div class="col">
     <div class="card">
-      <img src="/Images/797_novarino-nudi-1.jpg" class="card-img-top" alt="Novarino">
+      <img src="/Images/Biscotti/797_novarino-nudi-1.jpg" class="card-img-top" alt="Novarino">
       <div class="card-body">
         <h5 class="card-title">Novarino</h5>
       </div>
@@ -267,7 +267,7 @@ del dettaglio tradizionale, in Italia e all’estero. <br> L’azienda è presen
   </div>
       <div class="col">
     <div class="card">
-      <img src="/Images/803_granella-nudi-1.jpg" class="card-img-top" alt="Granella">
+      <img src="/Images/Biscotti/803_granella-nudi-1.jpg" class="card-img-top" alt="Granella">
       <div class="card-body">
         <h5 class="card-title">Granella</h5>
       </div>
@@ -275,7 +275,7 @@ del dettaglio tradizionale, in Italia e all’estero. <br> L’azienda è presen
   </div>
       <div class="col">
     <div class="card">
-      <img src="/Images/D13_novellone-nudo-normale-1.jpg" class="card-img-top" alt="Novellone">
+      <img src="/Images/Biscotti/D13_novellone-nudo-normale-1.jpg" class="card-img-top" alt="Novellone">
       <div class="card-body">
         <h5 class="card-title">Novellone</h5>
       </div>
@@ -283,7 +283,7 @@ del dettaglio tradizionale, in Italia e all’estero. <br> L’azienda è presen
   </div>
       <div class="col">
     <div class="card">
-      <img src="/Images/D63_novellone-senza-zucch-nudo-1.jpg" class="card-img-top" alt="Novellone senza zuccheri aggiunti">
+      <img src="/Images/Biscotti/D63_novellone-senza-zucch-nudo-1.jpg" class="card-img-top" alt="Novellone senza zuccheri aggiunti">
       <div class="card-body">
         <h5 class="card-title">Novellone senza zuccheri aggiunti</h5>
       </div>
@@ -291,7 +291,7 @@ del dettaglio tradizionale, in Italia e all’estero. <br> L’azienda è presen
   </div>
       <div class="col">
     <div class="card">
-      <img src="/Images/4N_spumiglie-nude.jpg" class="card-img-top" alt="Spumiglie con granella di nocciole">
+      <img src="/Images/Biscotti/4N_spumiglie-nude.jpg" class="card-img-top" alt="Spumiglie con granella di nocciole">
       <div class="card-body">
         <h5 class="card-title">Spumiglie con granella di nocciole</h5>
       </div>
@@ -369,7 +369,7 @@ Grazie alle 5 lievitazioni, il prodotto risulta più digeribile.</p>
 <div class="row row-cols-1 row-cols-md-3 g-5">
   <div class="col">
     <div class="card">
-      <img src="/Images/0666_milanese_nudo.jpg" class="card-img-top" alt="Panettone milanese basso">
+      <img src="/Images/Panettoni/0666_milanese_nudo.jpg" class="card-img-top" alt="Panettone milanese basso">
       <div class="card-body">
         <h5 class="card-title">Panettone milanese basso</h5>
       </div>
@@ -377,7 +377,7 @@ Grazie alle 5 lievitazioni, il prodotto risulta più digeribile.</p>
   </div>
   <div class="col">
     <div class="card">
-      <img src="/Images/5396_mandorlato_nudo.jpg" class="card-img-top" alt="Panettone milanese glassato con mandorle">
+      <img src="/Images/Panettoni/5396_mandorlato_nudo.jpg" class="card-img-top" alt="Panettone milanese glassato con mandorle">
       <div class="card-body">
         <h5 class="card-title">Panettone milanese glassato con mandorle</h5>
       </div>
@@ -385,7 +385,7 @@ Grazie alle 5 lievitazioni, il prodotto risulta più digeribile.</p>
   </div>
   <div class="col">
     <div class="card">
-      <img src="/Images/34_cioccolato_nudo.jpg" class="card-img-top" alt="Panettone al cioccolato">
+      <img src="/Images//Panettoni/34_cioccolato_nudo.jpg" class="card-img-top" alt="Panettone al cioccolato">
       <div class="card-body">
         <h5 class="card-title">Panettone al cioccolato</h5>
       </div>
@@ -393,7 +393,7 @@ Grazie alle 5 lievitazioni, il prodotto risulta più digeribile.</p>
   </div>
   <div class="col">
     <div class="card">
-      <img src="/Images/33_pere-cioccolato_nudo.jpg" class="card-img-top" alt="Panettone pera e cioccolato">
+      <img src="/Images/Panettoni/33_pere-cioccolato_nudo.jpg" class="card-img-top" alt="Panettone pera e cioccolato">
       <div class="card-body">
         <h5 class="card-title">Panettone pera e cioccolato</h5>
       </div>
@@ -401,7 +401,7 @@ Grazie alle 5 lievitazioni, il prodotto risulta più digeribile.</p>
   </div>
       <div class="col">
     <div class="card">
-      <img src="/Images/9844_fichi-cioccolato_nudo.jpg" class="card-img-top" alt="Panettone fichi e cioccolato">
+      <img src="/Images/Panettoni/9844_fichi-cioccolato_nudo.jpg" class="card-img-top" alt="Panettone fichi e cioccolato">
       <div class="card-body">
         <h5 class="card-title">Panettone fichi e cioccolato</h5>
       </div>
@@ -409,7 +409,7 @@ Grazie alle 5 lievitazioni, il prodotto risulta più digeribile.</p>
   </div>
       <div class="col">
     <div class="card">
-      <img src="/Images/4121_mirtilli-prosecco_nudo.jpg" class="card-img-top" alt="Panettone mirtillo rosso e Prosecco">
+      <img src="/Images/Panettoni/4121_mirtilli-prosecco_nudo.jpg" class="card-img-top" alt="Panettone mirtillo rosso e Prosecco">
       <div class="card-body">
         <h5 class="card-title">Panettone mirtillo rosso e Prosecco</h5>
       </div>
@@ -437,7 +437,7 @@ Grazie alle 5 lievitazioni, il prodotto risulta più digeribile.</p>
         <div class="row row-cols-1 row-cols-md-3 g-5">
   <div class="col">
     <div class="card">
-      <img src="/images/C20_classica-nuda.jpg" class="card-img-top" alt="Colomba Glassata Mandorlata Classica">
+      <img src="/Images/Colombe/C20_classica-nuda.jpg" class="card-img-top" alt="Colomba Glassata Mandorlata Classica">
       <div class="card-body">
         <h5 class="card-title">Colomba Glassata Mandorlata Classica</h5>
       </div>
@@ -445,7 +445,7 @@ Grazie alle 5 lievitazioni, il prodotto risulta più digeribile.</p>
   </div>
   <div class="col">
     <div class="card">
-      <img src="/Images/ciocco-nuda.jpg" class="card-img-top" alt="Colomba Glassata Cioccolato">
+      <img src="/Images/Colombe/ciocco-nuda.jpg" class="card-img-top" alt="Colomba Glassata Cioccolato">
       <div class="card-body">
         <h5 class="card-title">Colomba Glassata Cioccolato</h5>
       </div>
@@ -453,7 +453,7 @@ Grazie alle 5 lievitazioni, il prodotto risulta più digeribile.</p>
   </div>
   <div class="col">
     <div class="card">
-      <img src="/Images/C24_amarene-nuda.jpg" class="card-img-top" alt="Colomba Glassata Amarene">
+      <img src="/Images/Colombe/C24_amarene-nuda.jpg" class="card-img-top" alt="Colomba Glassata Amarene">
       <div class="card-body">
         <h5 class="card-title">Colomba Glassata Amarene</h5>
       </div>
@@ -461,7 +461,7 @@ Grazie alle 5 lievitazioni, il prodotto risulta più digeribile.</p>
   </div>
   <div class="col">
     <div class="card">
-      <img src="/Images/te-limone_nuda.jpg" class="card-img-top" alt="Colomba Primavera">
+      <img src="/Images/Colombe/te-limone_nuda.jpg" class="card-img-top" alt="Colomba Primavera">
       <div class="card-body">
         <h5 class="card-title">Colomba Primavera</h5>
       </div>
@@ -469,7 +469,7 @@ Grazie alle 5 lievitazioni, il prodotto risulta più digeribile.</p>
   </div>
       <div class="col">
     <div class="card">
-      <img src="/Images/C31_esotica-nuda.jpg" class="card-img-top" alt="Colomba Esotica">
+      <img src="/Images/Colombe/C31_esotica-nuda.jpg" class="card-img-top" alt="Colomba Esotica">
       <div class="card-body">
         <h5 class="card-title">Colomba Esotica</h5>
       </div>
@@ -477,7 +477,7 @@ Grazie alle 5 lievitazioni, il prodotto risulta più digeribile.</p>
   </div>
       <div class="col">
     <div class="card">
-      <img src="/Images/ciocco-nuda.jpg" class="card-img-top" alt="Colomba Glassata Fichi e Cioccolato">
+      <img src="/Images/Colombe/ciocco-nuda.jpg" class="card-img-top" alt="Colomba Glassata Fichi e Cioccolato">
       <div class="card-body">
         <h5 class="card-title">Colomba Glassata Fichi e Cioccolato</h5>
       </div>
