--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ del dettaglio tradizionale, in Italia e all’estero. <br> L’azienda è presen
   </div>
   <div class="col">
     <div class="card">
-      <img src="/Images/Biscotti/meliga_nudo.jpg" class="card-img-top" alt="Paste di Meliga">
+      <img src="/Images/meliga_nudo.jpg" class="card-img-top" alt="Paste di Meliga">
       <div class="card-body">
         <h5 class="card-title">Paste di Meliga</h5>
       </div>
