--- a/index.html
+++ b/index.html
@@ -415,6 +415,38 @@ Grazie alle 5 lievitazioni, il prodotto risulta più digeribile.</p>
       </div>
     </div>
   </div>
+  <div class="col">
+    <div class="card">
+      <img src="/Images/4138_paradiso_nudo.jpg" class="card-img-top" alt="Panettone Paradiso al limone">
+      <div class="card-body">
+        <h5 class="card-title">Panettone Paradiso al limone</h5>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="/Images/Panettone-Marron-Glace-nudo.jpg" class="card-img-top" alt="Panettone al Marron Glacè">
+      <div class="card-body">
+        <h5 class="card-title">Panettone al Marron Glacè</h5>
+      </div>
+    </div>
+  </div>
+   <div class="col">
+    <div class="card">
+      <img src="/Images/Panettone-Cremino-nudo2.jpg" class="card-img-top" alt="Panettone al Cremino">
+      <div class="card-body">
+        <h5 class="card-title">Panettone al Cremino</h5>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="/Images/Panettone-Moscato-nudo.jpg" class="card-img-top" alt="Panettone al Moscato">
+      <div class="card-body">
+        <h5 class="card-title">Panettone al Moscato</h5>
+      </div>
+    </div>
+  </div>
 </div>
   </div>
     
