--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@ Grazie alle 5 lievitazioni, il prodotto risulta più digeribile.</p>
   </div>
         <div class="col-12">
     <div class="form-check">
-      <input class="form-check-input" type="checkbox" id="gridCheck">
+      <input class="form-check-input" type="checkbox" id="gridCheck2">
       <label class="form-check-label" for="gridCheck">
        Acconsento al trattamento dei miei dati personali per l'invio tramite e-mail di comunicazioni informative e promozionali.
       </label>
