--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
   <!-- Visualizzazione responsive -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <!-- Titolo-->
+  <!-- Titolo della pagina -->
   <title>Sito web Brusa</title>
+  
+  <!-- Descrizione della pagina. Non sarà visibile nella pagina web, ma verrà usata dai motori di ricerca e da altre applicazioni per fornire una breve introduzione del contenuto della pagina -->
+  <meta name="description" content="Questo è il sito web pensato per la pasticceria Brusa, azienda biellese a conduzione familiare, attiva dal 1974 nella produzione di prodotti da forno, come canestrelli, biscotti, grissini, panettoni e colombe. In questo sito troverai brevi descrizioni relative ai prodotti Brusa e ai valori di questa azienda. Avrai a disposizione anche un form di compilazione nel caso avessi bisogno di richiedere informazioni e una sezione contatti in cui potrai trovare indirizzo, telefono ed email dell'azienda e gli orari di apertura del punto vendita Spaccio Brusa. Cliccando su appositi bottoni, potrai visitare l'E-Commerce dell'azienda Brusa per acquistare i suoi prodotti, mentre nel footer troverai tutti i social su cui è attiva tale azienda.">
   
   <!-- Viene referenziato il foglio di stile -->
   <link rel="stylesheet" href="style.css">
@@ -21,6 +24,8 @@
   
   <!-- Viene referenziato Bootstrap come supporto per la parte responsive -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+
+<link rel="icon"  type="image/x-icon" href="/images/favicon.png">
 </head>
   
   <body>
