--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
   <!-- Viene referenziato Bootstrap come supporto per la parte responsive -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
-<link rel="icon"  type="image/x-icon" href="/images/favicon.png">
+  <!-- Inserimento favicon -->
+<link rel="icon"  type="image/x-icon" href="/Immagini/favicon.png">
 </head>
   
   <body>
