--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
   <!-- Inserimento favicon -->
-<link rel="icon" type="image/x-icon" href="Immagini/favicon.png">
+<link rel="icon" type="image/x-icon" href="Images/favicon.png">
 </head>
   
   <body>
