--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         
          <div class="spacer"></div>
 
-          <h1>Dal 1974</h1>
+          <h1 style="color: white;">Dal 1974</h1>
   <h2>Tradizione e Qualità Piemontese</h2>
   
     <br>
